--- a/web data viz/public/painel.html
+++ b/web data viz/public/painel.html
@@ -27,7 +27,7 @@
         <div class="acessar">
             <span id="b_usuario">usuário</span>
         </div>
-        <div>
+        <div id="user">
             <img src="imgs/user.png" alt="" style="width: 100px; height: 60px; padding-top: 5px; padding-left: 40px;">
         </div>
         <div>
@@ -36,7 +36,6 @@
         </div>
         <div class="menu_lateral" id="menu_lateral">
             <ul class="menu">
-                <li><a href="sobre-mim.html">Configurações</a></li>
                 <li><a href="painel.html">Verificar Painel</a></li>
                 <li onclick="sair()"><a href="index.html">Sair</a></li>
             </ul>
@@ -100,6 +99,10 @@ b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
             alert("Você precisa estar logado para acessar esta página.");
             window.location = "/login.html"; 
         }
+    
+    if (sessionStorage.NOME_USUARIO == 'Anderson'){
+        user.innerHTML = `<img src="imgs/anderson.jpg" alt="" style="width: 60px; height: 60px; padding-top: 5px; border-radius: 30px;">`
+    }
 
     var menu = false;
 
